<resources>
    <string name="app_name">Memory Game Ultra</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="newGame">New Game</string>
    <string name="optionsText">Options</string>
    <string name="scoreText">Your Score:</string>
    <string name="defaultScore">0000</string>
    <string name="hiScoreText">New hi-score!</string>
    <string name="mainMenuText">Return to Main Menu</string>
    <string name="defaultQuestionNumber">0</string>
    <string name="remainingPausesText">Pauses:</string>
    <string name="defaultPauses">3</string>
    <string name="defaultGuessTime">3</string>
    <string name="duckText">Duck</string>
    <string name="gooseText">Goose</string>
    <string name="timeRemainingText">Time Remaining:</string>
    <string name="defaultTime">1:00</string>
    <string name="gameScreenImageContentDescription">Displays an image of either a duck or goose.</string>
    <string name="duckGuessArrowContentDescription">An arrow pointing to the left letting the user know to swipe left to guess duck.</string>
    <string name="gooseArrowContentDescription">An arrow pointing to the right letting the user know to swipe right to guess goose.</string>
    <string name="mainMenuHiScoreText">Hi-Score:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="HiScoreLabel">Hi-Scores</string>
    <string name="CustomizeImageLabel">Customize Cards</string>
    <string name= "ChangeImageButtonText">Change Image</string>
    <string name="HowToLabel">How To Play</string>
    <string name="HowToText1">How To Play:</string>
    <string name="HowToText2">To start a game, select "New Game". The front of the cards will be displayed for a few moments. Once the cards are flipped back over, select two cards. If they match, they will stay displaying the front. If they do not match, they will flip back over. When the cards are all matched or the timer in the top right runs out, the game will be over and the score will be displayed.</string>
    <string name="HowToText3">To view the high scores, select "Hi-Scores". They will be displayed in order from highest to lowest. Select the android back button to return to the main menu.</string>
    <string name="HowToText4">To use custom images, select "Custom Cards". Select "Change Image" for each available image and select the image from the photo gallery.</string>
    <string name="HowToText5">To change the settings, select the icon of three circles in the top right of the screen. The time can be change and "Extreme Mode" can be activated. In Extreme Mode, the cards do not initially display.</string>
</resources>
