<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreScreenContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ScoreScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yourScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/scoreText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/defaultScore"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@color/colorAccent"
        android:paddingTop="@dimen/buttonPadding"
        android:paddingBottom="@dimen/buttonPadding"
        android:text="@string/mainMenuText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primaryTextColor" />
</LinearLayout>